--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port = 8000
 server.servlet.context-path = /law
 spring.application.name=law-order
-spring.datasource.url=jdbc:mysql://server-db:3306/law?serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/law?serverTimeZone=UTC
+#spring.datasource.url=jdbc:mysql://server-db:3306/law?serverTimeZone=UTC
 spring.datasource.username=azaria
-spring.datasource.password=@xxxxxx89
+#spring.datasource.password=@xxxxxx89
+spring.datasource.password=@Talmud89
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
